--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsonp-namespace-plugin",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "support namespace for webpackJsonp callback",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/inferpse/jsonp-namespace-plugin#readme",
   "dependencies": {
-    "webpack-sources": "^0.1.2"
+    "babel-core": "^6.24.1",
+    "webpack-sources": "^1.0.1"
   }
 }
