--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsonp-namespace-plugin",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "support namespace for webpackJsonp callback",
   "main": "index.js",
   "scripts": {
@@ -15,9 +15,5 @@
   "bugs": {
     "url": "https://github.com/inferpse/jsonp-namespace-plugin/issues"
   },
-  "homepage": "https://github.com/inferpse/jsonp-namespace-plugin#readme",
-  "dependencies": {
-    "babel-core": "^6.24.1",
-    "webpack-sources": "^1.0.1"
-  }
+  "homepage": "https://github.com/inferpse/jsonp-namespace-plugin#readme"
 }
